[package]
name = "brouter-client"
version = "0.1.3"
edition = "2021"
license = "Apache-2.0"
authors = ["Jelmer Vernooĳ <jelmer@jelmer.uk>"]
description = "API Client implement for brouter"
default-run = "broute"

[dependencies]
clap = { version = "4", optional = true, features = ["derive"] }
geo-types = ">=0.6"
gpx = "0.10"
lazy-regex = "3"
log = "0.4"
reqwest = { version = "0.12", features = ["blocking"] }

[features]
cli = ["dep:clap"]

[[bin]]
name = "broute"
required-features = ["cli"]
