[package]
name = "brouter-client"
version = "0.1.5"
edition = "2021"
license = "Apache-2.0"
authors = ["Jelmer Vernooĳ <jelmer@jelmer.uk>"]
description = "API Client implement for brouter"
default-run = "broute"

[dependencies]
clap = { version = "4", optional = true, features = ["derive"] }
geo-types = ">=0.6"
gpx = "0.10"
lazy-regex = "3"
log = "0.4"
reqwest = { version = "0.12", features = ["blocking"] }
xdg = { version = "3.0.0", optional = true }
zip = { version = "0.6", optional = true }

[features]
cli = ["dep:clap"]
local = ["dep:zip", "dep:xdg"]
default = ["local"]

[[bin]]
name = "broute"
required-features = ["cli"]

[[bin]]
name = "local-brouter"
required-features = ["local", "cli"]
